cmake_minimum_required(VERSION 3.16)
project(pa2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(cs221util)
include_directories(cs221util/lodepng)
include_directories(images)
include_directories(originals)
include_directories(soln_frames)
include_directories(soln_images)

add_executable(pa2
        cs221util/lodepng/lodepng.cpp
        cs221util/lodepng/lodepng.h
        cs221util/catch.hpp
        cs221util/HSLAPixel.cpp
        cs221util/HSLAPixel.h
        cs221util/json.hpp
        cs221util/PNG.cpp
        cs221util/PNG.h
        cs221util/RGB_HSL.h
        images/bfsborder.png
        images/bfsconway.png
        images/bfsgrid.png
        images/bfsstripe.png
        images/borderColorPickerTest.png
        images/conwayColorPickerTest.png
        images/dfsborder.png
        images/dfsconway.png
        images/dfsgrid.png
        images/dfsstripe.png
        images/stripeColorPickerTest.png
        originals/black.png
        originals/Canada.png
        originals/cloud.png
        originals/girl.png
        originals/leaf.png
        originals/mooncake.png
        originals/mtforce.png
        originals/patternforce.png
        soln_frames/bfsborder.gif
        soln_frames/bfsborder00.png
        soln_frames/bfsborder01.png
        soln_frames/bfsborder02.png
        soln_frames/bfsborder03.png
        soln_frames/bfsborder04.png
        soln_frames/bfsborder05.png
        soln_frames/bfsborder06.png
        soln_frames/bfsborder07.png
        soln_frames/bfsborder08.png
        soln_frames/bfsborder09.png
        soln_frames/bfsborder10.png
        soln_frames/bfsconway.gif
        soln_frames/bfsgrid.gif
        soln_frames/bfsrain.gif
        soln_frames/bfsrain00.png
        soln_frames/bfsrain01.png
        soln_frames/bfsrain02.png
        soln_frames/bfsrain03.png
        soln_frames/bfsrain04.png
        soln_frames/bfsrain05.png
        soln_frames/bfsrain06.png
        soln_frames/bfsrain07.png
        soln_frames/bfsrain08.png
        soln_frames/bfsrain09.png
        soln_frames/bfsrain10.png
        soln_frames/bfsrain11.png
        soln_frames/bfsrain12.png
        soln_frames/bfsrain13.png
        soln_frames/bfsrain14.png
        soln_frames/bfsrain15.png
        soln_frames/bfsrain16.png
        soln_frames/bfsrain17.png
        soln_frames/bfsrain18.png
        soln_frames/bfsrain19.png
        soln_frames/bfsrain20.png
        soln_frames/bfsrain21.png
        soln_frames/bfsrain22.png
        soln_frames/bfsrain23.png
        soln_frames/bfsrain24.png
        soln_frames/bfsrain25.png
        soln_frames/bfsrain26.png
        soln_frames/bfsrain27.png
        soln_frames/bfsrain28.png
        soln_frames/bfsrain29.png
        soln_frames/bfsrain30.png
        soln_frames/bfsrain31.png
        soln_frames/bfsrain32.png
        soln_frames/bfsrain33.png
        soln_frames/bfsrain34.png
        soln_frames/bfsrain35.png
        soln_frames/bfsrain36.png
        soln_frames/bfsrain37.png
        soln_frames/bfsrain38.png
        soln_frames/bfsrain39.png
        soln_frames/bfsrain40.png
        soln_frames/bfsrain41.png
        soln_frames/bfsrain42.png
        soln_frames/bfsrain43.png
        soln_frames/bfsstripe.gif
        soln_frames/bfsstripe00.png
        soln_frames/bfsstripe01.png
        soln_frames/bfsstripe02.png
        soln_frames/bfsstripe03.png
        soln_frames/bfsstripe04.png
        soln_frames/bfsstripe05.png
        soln_frames/bfsstripe06.png
        soln_frames/bfsstripe07.png
        soln_frames/bfsstripe08.png
        soln_frames/bfsstripe09.png
        soln_frames/bfsstripe10.png
        soln_frames/bfsstripe11.png
        soln_frames/bfsstripe12.png
        soln_frames/bfsstripe13.png
        soln_frames/bfsstripe14.png
        soln_frames/bfsstripe15.png
        soln_frames/bfsstripe16.png
        soln_frames/bfsstripe17.png
        soln_frames/bfsstripe18.png
        soln_frames/bfsstripe19.png
        soln_frames/blackpfbfsrain.gif
        soln_frames/blackpfdfsrain.gif
        soln_frames/dfsborder.gif
        soln_frames/dfsborder00.png
        soln_frames/dfsborder01.png
        soln_frames/dfsborder02.png
        soln_frames/dfsborder03.png
        soln_frames/dfsborder04.png
        soln_frames/dfsborder05.png
        soln_frames/dfsborder06.png
        soln_frames/dfsborder07.png
        soln_frames/dfsborder08.png
        soln_frames/dfsborder09.png
        soln_frames/dfsborder10.png
        soln_frames/dfsgrid.gif
        soln_frames/dfsrain.gif
        soln_frames/dfsrain00.png
        soln_frames/dfsrain01.png
        soln_frames/dfsrain02.png
        soln_frames/dfsrain03.png
        soln_frames/dfsrain04.png
        soln_frames/dfsrain05.png
        soln_frames/dfsrain06.png
        soln_frames/dfsrain07.png
        soln_frames/dfsrain08.png
        soln_frames/dfsrain09.png
        soln_frames/dfsrain10.png
        soln_frames/dfsrain11.png
        soln_frames/dfsrain12.png
        soln_frames/dfsrain13.png
        soln_frames/dfsrain14.png
        soln_frames/dfsrain15.png
        soln_frames/dfsrain16.png
        soln_frames/dfsrain17.png
        soln_frames/dfsrain18.png
        soln_frames/dfsrain19.png
        soln_frames/dfsrain20.png
        soln_frames/dfsrain21.png
        soln_frames/dfsrain22.png
        soln_frames/dfsrain23.png
        soln_frames/dfsrain24.png
        soln_frames/dfsrain25.png
        soln_frames/dfsrain26.png
        soln_frames/dfsrain27.png
        soln_frames/dfsrain28.png
        soln_frames/dfsrain29.png
        soln_frames/dfsrain30.png
        soln_frames/dfsrain31.png
        soln_frames/dfsrain32.png
        soln_frames/dfsrain33.png
        soln_frames/dfsrain34.png
        soln_frames/dfsrain35.png
        soln_frames/dfsrain36.png
        soln_frames/dfsrain37.png
        soln_frames/dfsrain38.png
        soln_frames/dfsrain39.png
        soln_frames/dfsrain40.png
        soln_frames/dfsrain41.png
        soln_frames/dfsrain42.png
        soln_frames/dfsrain43.png
        soln_frames/dfsstripe.gif
        soln_frames/dfsstripe00.png
        soln_frames/dfsstripe01.png
        soln_frames/dfsstripe02.png
        soln_frames/dfsstripe03.png
        soln_frames/dfsstripe04.png
        soln_frames/dfsstripe05.png
        soln_frames/dfsstripe06.png
        soln_frames/dfsstripe07.png
        soln_frames/dfsstripe08.png
        soln_frames/dfsstripe09.png
        soln_frames/dfsstripe10.png
        soln_frames/dfsstripe11.png
        soln_frames/dfsstripe12.png
        soln_frames/dfsstripe13.png
        soln_frames/dfsstripe14.png
        soln_frames/dfsstripe15.png
        soln_frames/dfsstripe16.png
        soln_frames/dfsstripe17.png
        soln_frames/dfsstripe18.png
        soln_frames/dfsstripe19.png
        soln_frames/pfbfsrain.gif
        soln_frames/pfdfsrain.gif
        soln_images/bfsborder.gif
        soln_images/bfsborder.png
        soln_images/bfsconway.gif
        soln_images/bfsconway.png
        soln_images/bfsgrid.png
        soln_images/bfsstripe.gif
        soln_images/bfsstripe.png
        soln_images/borderColorPickerTest.png
        soln_images/conwayColorPickerTest.png
        "soln_images/dfsborder copy.png"
        soln_images/dfsborder.gif
        soln_images/dfsborder.png
        soln_images/dfsconway.gif
        soln_images/dfsconway.png
        soln_images/dfsgrid.png
        soln_images/dfsstripe.gif
        soln_images/dfsstripe.png
        soln_images/stripeColorPickerTest.png
        animation.cpp
        animation.h
        borderColorPicker.cpp
        borderColorPicker.h
        colorPicker.h
        conwayColorPicker.cpp
        conwayColorPicker.h
        deque.cpp
        deque.h
        filler.cpp
        filler.h
        gridColorPicker.cpp
        gridColorPicker.h
        Makefile
        ordering_structure.h
        partners.txt
        queue.cpp
        queue.h
        soln_testFills.out
        stack.cpp
        stack.h
        stripeColorPicker.cpp
        stripeColorPicker.h
        testFills.cpp
        testFills.out
        testStackQueue.cpp)
